--- a/src/frontend/stylus/_settings.styl
+++ b/src/frontend/stylus/_settings.styl
@@ -2,6 +2,8 @@
 Settings and variables
 --------------------------------------- */
 
+$black = #000
+
 // match materialize
 $screen-md = 992px
 $screen-sm = 600px
