--- a/src/views/admin/index.jade
+++ b/src/views/admin/index.jade
@@ -1,5 +1,8 @@
 extends _layout
 
 block main_content
-  p Welcome to the admin
+  p Welcome to the admin dashboard. The menu on the left is populated by items 
+    | specified in <code>config.adminMenu</code>. See 
+    | <a href="https://github.com/hiddentao/waigo-admin">waigo-admin</a> for 
+    | more information.
 
