--- a/src/frontend/stylus/_admin.styl
+++ b/src/frontend/stylus/_admin.styl
@@ -63,10 +63,13 @@ main#admin_container
           
     // /emails
     .page-emails
+      .email-button
+        margin-top 4em
+        > button
+          display block
+          margin 0 auto
       .send-result
         margin-top 0.5em
-      .tab-content > div
-        padding-top 1em
       .preview
         & > em
           display block
