fixes related to new plugin name

--- a/src/views/admin/_layout.pug
+++ b/src/views/admin/_layout.pug
@@ -20,8 +20,8 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no")
 
     // styles
-    link(rel="stylesheet", href=staticUrl('waigo-admin:/css/admin-vendor.css'))
-    link(rel="stylesheet", href=staticUrl('waigo-admin:/css/admin.css'))
+    link(rel="stylesheet", href=staticUrl('waigo-plugin-admin:/css/admin-vendor.css'))
+    link(rel="stylesheet", href=staticUrl('waigo-plugin-admin:/css/admin.css'))
 
     title Admin dashboard
 
@@ -49,6 +49,6 @@ html
           block main_content
 
 
-    script(type="text/javascript" src=staticUrl('waigo-admin:/js/admin-vendor.js'))
-    script(type="text/javascript" src=staticUrl('waigo-admin:/js/admin.js'))
+    script(type="text/javascript" src=staticUrl('waigo-plugin-admin:/js/admin-vendor.js'))
+    script(type="text/javascript" src=staticUrl('waigo-plugin-admin:/js/admin.js'))
 
