--- a/src/views/admin/index.pug
+++ b/src/views/admin/index.pug
@@ -3,6 +3,6 @@ extends _layout
 block main_content
   p Welcome to the admin dashboard. The menu on the left is populated by items 
     | specified in <code>config.adminMenu</code>. See 
-    | <a href="https://github.com/hiddentao/waigo-admin">waigo-admin</a> for 
+    | <a href="https://github.com/hiddentao/waigo-plugin-admin">waigo-plugin-admin</a> for 
     | more information.
 
