--- a/src/views/admin/_layout.pug
+++ b/src/views/admin/_layout.pug
@@ -43,7 +43,7 @@ html
         #admin_menu.col.s2
           .collection.hide-on-med-and-down
             each item in adminMenu
-              - var className = 'collection-item ' + (matchesCurrentUrl(item.path) ? 'active': '');
+              - var className = 'collection-item ' + (currentUrl === item.path ? 'active': '');
               a(class=className, href=item.path) #{item.label}
         #admin_content.col.s10
           block main_content
